fixed npm run dev script, and tailwind access to files

--- a/sheldon_site/templates/_base.html
+++ b/sheldon_site/templates/_base.html
@@ -19,6 +19,9 @@
 </head>
 
 <body class="bg-green-50">
+
+    {% include "blocks/navbar.html" %}
+
     <div class="container mx-auto mt-4">
         {% block content %}
         {% endblock content %}
