--- a/project_container/templates/_base.html
+++ b/project_container/templates/_base.html
@@ -33,6 +33,8 @@
     
     {% include "blocks/footer/footer.html" %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    {% block endJS %}
+    {% endblock %}
 </body>
 
 </html>
