--- a/project_container/templates/pages/funding.html
+++ b/project_container/templates/pages/funding.html
@@ -12,14 +12,20 @@
 
 <div class="flex flex-col items-center">
   <div class="py-10 px-10">
-    <h2 class="mb-2 text-lg font-semibold text-gray-900 dark:text-white">
+    <h2 class="mb-2 text-2xl font-semibold text-gray-900 dark:text-white">
       We would like to thank the groups that make our research possible:
     </h2>
-    <ul class="w-5/6 mx-5 max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
+    <ul class="mx-auto w-5/6 max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
       {% for fund in funding %}
-      <li>
-        {{ fund.funding_source }}
-      </li>
+        {% if fund.is_active %}          
+          <li class="font-bold text-black">
+            {{ fund.funding_source }}
+          </li>
+        {% else %}
+          <li>
+            {{ fund.funding_source }}
+          </li>
+        {% endif %}
       {% endfor %}
     </ul>
   </div>
