added current year context processor to update footer dynamically with current year.

--- a/project_container/templates/blocks/footer/footer.html
+++ b/project_container/templates/blocks/footer/footer.html
@@ -45,7 +45,7 @@
       <!-- Subsection -->
       <div class="sm:flex sm:items-center sm:justify-between">
           <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
-            © 2024 
+            © {{ CURRENT_YEAR }}
             <a href="#" class="hover:underline">
                 SheldonGroup
             </a>
