updated alumni titles

--- a/project_container/templates/pages/alumni.html
+++ b/project_container/templates/pages/alumni.html
@@ -70,6 +70,8 @@
               <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                 {% if grad.title == 'Ph.D' %}
                 Dr.
+                {% elif grad.title == 'M.S.' %}
+                M.S.
               {% endif %}
               {{ grad.name }}
               
