--- a/project_container/templates/pages/hiring.html
+++ b/project_container/templates/pages/hiring.html
@@ -7,16 +7,19 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="text-3xl text-uci-blue-dk mx-auto px-4 pt-2 font-semibold">{{ title|title }}</h1>
 
+
+{% if positions %}
+<h1 class="text-3xl text-uci-blue-dk mx-auto px-4 pt-2 font-semibold">{{ title|title }}</h1>
 
 <div class="flex flex-col items-center">
   <div class="pt-10 pb-2 px-10">
     <h2 class="mb-2 text-2xl font-semibold text-gray-900 dark:text-white">
       We are currently hiring for the following positions:
     </h2>
+  </div>
 </div>
-</div>
+{% endif %}
 
 {% for position in positions %}
 <div class="w-auto m-10">
@@ -34,5 +37,39 @@
         {% endif %}
     </div>
 </div>
-    {% endfor %}
+{% endfor %}
+
+{% if post_doc_help_links %}
+<h1 class="text-2xl text-uci-blue-dk mx-auto px-10 sm:px-20 md:px-25 lg:px-40 pt-2 font-semibold">{{ sub_title|title }}</h1>
+
+<div class="mt-4 px-10 sm:px-20 md:px-25 lg:px-40 mx-auto text-gray-600 sm:text-lg">    
+  <p>
+    We welcome inquiries from prospective postdoctoral researchers who are interested in joining our lab. 
+    Below are several funding opportunities that may be helpful in securing external support. Candidates 
+    who obtain independent funding are encouraged to reach out to discuss potential research collaborations 
+    within our group.
+  </p>
+</div>
+
+<div class="flex container justify-center mx-auto px-8 sm:px-14 md:px-16 lg:px-44 py-8">
+  <ol class="list-decimal" id="publications-list">
+    {% for post_doc_help_link in post_doc_help_links %}
+      <li class="mb-3">
+
+        <a href="{{ post_doc_help_link.link }}" target="_blank" class="text-blue-500">
+          {{ post_doc_help_link.name }}
+        </a>
+
+        {% if post_doc_help_link.due_date %}
+          <em>
+            {{ post_doc_help_link.due_date }}
+          </em>
+        {% endif %}
+
+      </li>
+      {% endfor %}
+    </ol>
+</div>
+{% endif %}
+
 {% endblock %}
